--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+django = "^5.1.1"
+djangorestframework = "^3.15.2"
+django-rest-auth = "^0.9.5"
 
 
 [build-system]
