--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.1.1"
 djangorestframework = "^3.15.2"
+drf-yasg = "^1.21.7"
+djoser = "^2.2.3"
 
 
 [build-system]
