--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   event-manager:
-    image: event-manager:latest
+    image: event-manager:0.1
     container_name: event_manager
     restart: always
     ports:
